Added dependencies using submodules

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,9 +1,9 @@
 resolver: lts-9.3
 packages:
 - .
-- ../core
-- ../alang-sexpr-parser
-- ../alang-clike-parser
+- ohua-core
+- alang-sexpr-parser
+- alang-clike-parser
 extra-deps: []
 flags:
   ohuac:
