Exiting with non-0 exit code on error
Fixes #9

--- a/package.yaml
+++ b/package.yaml
@@ -87,6 +87,7 @@ executables:
     dependencies:
     - ohuac
     - optparse-applicative
+    - exit-codes
     ghc-options:
     - -threaded
     - -rtsopts
