--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@ packages:
     git: https://github.com/ohua-dev/alang-ml-parser
     commit: 17ad1606549984ddd68bc6a0a2d0d074ae9b8be5
   extra-dep: true
-extra-deps: [exit-codes-0.1.1.0]
+extra-deps: []
 flags:
   ohuac:
     with-clike-parser: yes
