Changed cmd line option composition, added `version` command
This should help to avoid situations where For some reason we do not use the
newly compiled version of the compiler after a change. This has lead to very
confusing situations in the past.

--- a/package.yaml
+++ b/package.yaml
@@ -85,6 +85,7 @@ executables:
     dependencies:
     - ohuac
     - optparse-applicative
+    - time
     ghc-options:
     - -threaded
     - -rtsopts
