Basic overhaul of Lowering pass

--- a/package.yaml
+++ b/package.yaml
@@ -66,6 +66,7 @@ library:
   - temporary
   - fgl
   - comonad
+  - graphviz
   when:
     - condition: flag(with-clike-parser)
       dependencies:
