--- a/stack.yaml
+++ b/stack.yaml
@@ -1,18 +1,16 @@
 resolver: lts-12.10
 packages:
 - .
-- ../ohua-core/core/
-- ../alang-clike-parser
 extra-deps:
-# - github: ohua-dev/alang-clike-parser
-#   commit: 8d46028ce8c697f7fd8bb2b7bfc9259c961effd7
+- github: ohua-dev/alang-clike-parser
+  commit: b339c40e923e44cad94299219706003d28d3b3ee
 - github: ohua-dev/alang-sexpr-parser
   commit: fdc81f8c8c2fef63e7a306c2a323e3919b0d88ca
 - github: ohua-dev/alang-ml-parser
   commit: ffb856ac7f60e83689324f8d6b8334bb8f898159
-# - github: ohua-dev/ohua-core
-#   commit: 1f7c4e6f10a6aed7756443457f8b0eb3266ce58e
-#   subdirs: [core]
+- github: ohua-dev/ohua-core
+  commit: 8fe0ee90f4a1aea0c5bfabe922b290fed668a7da
+  subdirs: [core]
 - github: JustusAdam/fgl
   commit: 9e0c7e6c5ef86642b463a5942c822cab2c0c0475
 flags:
