Multi-query support.
Installing new queries no longer overwrites old queries

--- a/package.yaml
+++ b/package.yaml
@@ -53,6 +53,8 @@ dependencies:
 - prettyprinter
 - recursion-schemes
 - containers
+- binary
+- vector
 library:
   source-dirs: src/hs
   dependencies:
